Update index.html and styles.css image names, source code comments, and add images folder

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- index_4.3 -->
+<!-- index-v5 -->
 
 <!doctype html>
 <html lang="en">
@@ -17,7 +17,7 @@
 	<script src="js/BSS.js"></script>
 	<!-- CSS -->
 	<link href="css/BSS-styles.css" rel="stylesheet">  <!-- bss slideshow css -->
-	<link href="css/styles_4.3.css" rel="stylesheet" type="text/css">
+	<link href="css/styles.css" rel="stylesheet" type="text/css">
 	<!-- LINKS -->
 	<script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js" integrity="sha384-SlE991lGASHoBfWbelyBPLsUlwY1GwNDJo3jSJO04KZ33K2bwfV9YBauFfnzvynJ" crossorigin="anonymous"></script>
 	<!-- defer icon - stops page layout shift -->
@@ -33,7 +33,7 @@
 	<!-- HEADER -->	
 		<div class="header">
 			<div id="logo">
-				<img class="logo" src="images/cb-logo-hex.png" alt="logo">
+				<img class="logo" src="images/cb-logo.png" alt="logo">
 				<div class="name">
 				<div id="name">Chris Barclay</div>
 				<div id="title">Web Developer</div></div>
@@ -71,7 +71,7 @@
 	<!-- INTRO AREA -->
 	<div class="intro-container">
 		<div id="intro">
-			<img src="images/chrisPic_small.jpg" alt="A picture of Chris" width="100%";>
+			<img src="images/ChrisBarclay-Professional-mini.jpg" alt="A picture of Chris" height="25%";>
 			<p>
 				Hello, I&#39;m Chris. I create visually appealing web experiences. My specialty is in React web
 				applications. I also build custom websites and user interfaces, all according to the latest W3C
