--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,9 +1,17 @@
-<!-- Top section: Nav, Name & logo, Location, email, Github and LinkedIn links -->
+<!-- Top section -->
+<!-- Name -->
+<!-- ?My Title? (maybe don't need) -->
+<!-- LinkedIn, Email, city (San Diego) -->
 
-<!-- Certifications Section -->
+<!-- Professional Summary section -->
 
-<!-- Skills Section -->
+<!-- Certification section -->
+<!-- Skills section -->
+<!-- ?Tools / Platforms section? (maybe don't need) -->
 
-<!-- Experience Section -->
+<!-- Experience section -->
+<!-- Employment 1: Technical Project Manager @ PINT -->
+<!-- Employment 2: Technical Project Manager @ Barefoot -->
+<!-- Employment 3: Web Developer @ Barefoot -->
 
-<!-- Education Section -->
+<!-- Education section -->
