Change HTML on  landing page / about section (incomplete), minor changes to CSS, delete my picture.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html lang="en">
 
 <head>
-	<title>Portfolio | Chris Barclay - Web Developer &amp; Front End Engineer</title>
+	<title>Portfolio | Chris Barclay - Cloud Developer</title>
 	
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta id="viewport" name="viewport" content="width=device-width,minimum-scale=0.8,maximum-scale=1,user-scalable=yes">
@@ -35,22 +35,28 @@
 			<div id="logo">
 				<img class="logo" src="images/cb-logo.png" alt="logo">
 				<div class="name">
-				<div id="name">Chris Barclay</div>
-				<div id="title">Web Developer</div></div>
+				<div id="name">Christopher Barclay</div>
+				<div id="title">Cloud Developer</div></div>
 			</div>
 			
 		<!-- NAV BAR -->
 			<nav id="nav-1">
 				<ul>
+					<!-- 
 					<li class="nav-btn"><a href='#port'>PORTFOLIO</a></li>
-					<li class="nav-btn"><a href='#tech'>TECHNOLOGIES</a></li>
+					<li class="nav-btn"><a href='#tech'>TECHNOLOGIES</a></li> 
+					-->
+					<li class="nav-btn"><a href='#'>Home</a></li>
+					<li class="nav-btn"><a href='#'>Skills</a></li>
+					<li class="nav-btn"><a href='#'>Experience</a></li>
+					<li class="nav-btn"><a href='#'>Projects</a></li>					
 				</ul>
 			</nav>
 			<nav id="nav-2">
 				<ul>
-					<li class="nav-btn"><a href='https://www.linkedin.com/in/christopherbarclay'><i class="fab fa-linkedin"></i>LINKEDIN</a></li>
-					<li class="nav-btn"><a href='https://github.com/Clesoud'><i class="fab fa-github"></i>GITHUB</a></li>
-					<li class="nav-btn"><a href='https://codepen.io/Clesoud'><i class="fab fa-codepen"></i>CODEPEN</a></li>
+					<li class="nav-btn"><a href='https://www.linkedin.com/in/christopherbarclay'><i class="fab fa-linkedin"></i></a></li>
+					<li class="nav-btn"><a href='https://github.com/Clesoud'><i class="fab fa-github"></i></a></li>
+			<!--	<li class="nav-btn"><a href='https://codepen.io/Clesoud'><i class="fab fa-codepen"></i></a></li>  -->
 					<!-- social icon css is found at #footer in stylesheet -->
 				</ul>
 			</nav>
@@ -58,26 +64,28 @@
 	
 
 		
-	<!-- LANDING PAGE -->
-	<div id="landing-page">
+	<!-- ABOUT Section -->
+	<div id="about-page">
 		<div class="titles">
-			<h1>Front End Engineering</h1>
-			<h2>Elegant, responsive web development for an exceptional user experience</h2>
+			<h1>Christopher Barclay</h1>
+			<h2>San Diego, CA &nbsp; <bold>|</bold> &nbsp; Christopher<!----->JBarclay<!----->&#64;g<!----->mail&#46;<!----->com &nbsp; <bold>|</bold> &nbsp; LinkedIn.com/in/ChristopherBarclay</h2>
+			<p>
+				I am a GCP Cloud Engineer skilled in Docker, Kubernetes, IaaS, PaaS, IaC using Terraform, and Project Management. 
+				<br>
+				Strong technical knowledge in Google Cloud Platform and six years of writing software and automation. 
+				I have a track record of successfully leading customers to solve complex technology challenges while leveraging DevOps practices. 
+			</p>
 		</div>
-	</div><!-- end of landing page div -->
+	</div>
+	<!-- end of About Section div -->
 	
 
 
 	<!-- INTRO AREA -->
 	<div class="intro-container">
 		<div id="intro">
-			<img src="images/ChrisBarclay-Professional-mini.jpg" alt="A picture of Chris" height="25%";>
 			<p>
-				Hello, I&#39;m Chris. I create visually appealing web experiences. My specialty is in React web
-				applications. I also build custom websites and user interfaces, all according to the latest W3C
-				web standards guidelines. Please feel free to contact me if you are interested in working with me. My email
-				address is Chris @ cbarclay.io (exlude the spaces). Thank you for checking out my site and have an awesome
-				day!
+				Something goes here, I'm sure of it.
 			</p>
 		</div>
 	</div>
