--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,18 +1,9 @@
-<!-- Top section -->
-<!-- Name -->
-<!-- ?My Title? (maybe don't need) -->
-<!-- LinkedIn, Email, city (San Diego) -->
-
-<!-- Professional Summary section -->
+<!-- ABOUT section COMPLETE -->
 
 <!-- Certification section -->
-<!-- Skills section -->
-<!-- ?Tools / Platforms section? (maybe don't need) -->
+<!-- Skills, Tools, Languages section -->
 
-<!-- Experience section -->
-<!-- Employment 1: Technical Project Manager @ PINT -->
-<!-- Employment 2: Technical Project Manager @ Barefoot -->
-<!-- Employment 3: Web Developer @ Barefoot -->
+<!-- EXPERIENCE section COMPLETE! -->
 
 <!-- Education section -->
 
