Adds styling changes, list of defaults on styles.css

--- a/pages/resume.html
+++ b/pages/resume.html
@@ -1,7 +1,16 @@
+<!doctype html>
+<html lang="en">
+
+<head>
+	<link href="resume-styles.css" rel="stylesheet" type="text/css">
+</head>
+
 <!-- ABOUT section COMPLETE -->
 
 <!-- Certification section -->
 <!-- Skills, Tools, Languages section -->
+
+
 
 <!-- EXPERIENCE section COMPLETE! -->
 
