--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
 
 <body>
 	<!-- HEADER -->	
-		<div class="header">
+		<div id="header">
+
+			<!-- Logo Area -->
 			<div id="logo">
 				<img class="logo" src="images/cb-logo.png" alt="logo">
-				<div class="name">
-				<div id="name">Christopher Barclay</div>
-				<div id="title">Cloud Developer</div></div>
+				<div id="logo-name-title">
+					<h1>Christopher Barclay</h1>
+					<h2>Cloud Developer</h2>
+				</div>
 			</div>
 			
-		<!-- NAV BAR -->
+			<!-- NAV BAR -->
 			<nav id="nav-1">
 				<ul>
 					<!-- 
@@ -65,7 +68,7 @@
 
 		
 	<!-- ABOUT Section -->
-	<div id="about-page">
+	<div id="about">
 		<div class="titles">
 			<h1>Christopher Barclay</h1>
 			<h2>San Diego, CA &nbsp; <bold>|</bold> &nbsp; Christopher<!----->JBarclay<!----->&#64;g<!----->mail&#46;<!----->com &nbsp; <bold>|</bold> &nbsp; LinkedIn.com/in/ChristopherBarclay</h2>
@@ -77,7 +80,7 @@
 			</p>
 		</div>
 	</div>
-	<!-- end of About Section div -->
+	<!-- end of ABOUT Section div -->
 	
 
 
